--- a/data/configuracion.json
+++ b/data/configuracion.json
@@ -1,11 +1,11 @@
 {
   "nombreNegocio": "Acabados Profesionales Lima",
-  "slogan": "Expertos en Enchapado, Pintura y Acabados de Calidad",
-  "descripcion": "Más de 10 años transformando espacios en Lima",
+  "slogan": "Expertos en Pintura, Drywall y Acabados de Calidad",
+  "descripcion": "18 años transformando espacios con calidad y confianza",
   "contacto": {
-    "telefono": "+51 999 888 777",
-    "email": "contacto@acabadoslima.com",
-    "whatsapp": "51999888777",
+    "telefono": "966 917 638",
+    "email": "",
+    "whatsapp": "51966917638",
     "horario": "Lunes a Sábado: 8:00 AM - 6:00 PM"
   },
   "redes": {
@@ -13,13 +13,13 @@
     "instagram": "https://instagram.com/acabadoslima"
   },
   "estadisticas": {
-    "añosExperiencia": 10,
+    "añosExperiencia": 18,
     "proyectosCompletados": 150,
     "clientesSatisfechos": 120
   },
   "seo": {
-    "titulo": "Servicios de Construcción y Acabados en Lima | Acabados Profesionales",
-    "descripcion": "Expertos en enchapado, pintura, drywall y electricidad. Garantía de calidad y años de experiencia.",
+    "titulo": "Servicios de Construcción y Acabados | Acabados Profesionales",
+    "descripcion": "Expertos en pintura, drywall y acabados de calidad. Garantía de calidad y años de experiencia.",
     "keywords": "acabados lima, pintura lima, enchapado, drywall, construcción"
   }
 }
